# ps1-project

./: .gitignore  CMakeLists.txt  readme.md
assets/: cube-colored.mtl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: camera.hpp  file_loader.hpp  game_objects.hpp  main.cpp  obj_loader.hpp
